# 1013-toilet

./: .gitignore  README.md
pi-display/: CMakeLists.txt  main.cpp  weston.sh
pi-display/cmake/: platform.cmake
pi-display/internal/application/: config.hpp  service.hpp
pi-display/internal/infrastructure/camera/: CMakeLists.txt  camera.cpp  camera.hpp
pi-display/internal/infrastructure/graphics/: CMakeLists.txt  graphics.cpp  graphics.hpp
pi-display/internal/infrastructure/websocket/: CMakeLists.txt  context.hpp  websocket.cpp  websocket.hpp
pi-display/internal/utils/: buffers.hpp  common.hpp
pi-display/test/: CMakeLists.txt  main.cpp
pi-display/test/test_infrastructure/: test_websocket.cpp
pico-monitor/: boot.py  main.py
